This is my work

--- a/html/studentinfosheet.html
+++ b/html/studentinfosheet.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>student's info sheet page</title>
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="../css/studentsheet.css">
 </head>
 <body>
     <!--Please dont touch this!!!-->
@@ -13,6 +13,192 @@
         <p>Welcome to result broadsheet <br>student's info sheet page</p>
 
     <!--Kindly write your code below-->
+    <h1>Students Information</h1>
+    <div class="course">
+        <table style="width:80%" class="center">
+          <tr class="student">
+            <th>S/N</th>
+            <th>Matric Number</th>
+            <th>Names</th>
+            <th>Test Score</th>
+            <th>Exam Score</th>
+            <th>Total</th>
+            <th>Remark</th>
+          </tr>
+          <tr>
+            <th>1</th>
+            <th>FSC/CSC/010</th>
+            <th>Cody Fisher</th>
+            <th>26</th>
+            <th>55</th>
+            <th>84</th>
+            <th>A</th>
+          </tr>
+          <tr class="A">
+            <th>2</th>
+            <th>FSC/CSC/011</th>
+            <th>Kristin Watson</th>
+            <th>28</th>
+            <th>46</th>
+            <th>64</th>
+            <th>B</th>
+          </tr>
+          <tr>
+            <th>3</th>
+            <th>FSC/CSC/012</th>
+            <th>Jenny Wilson</th>
+            <th>26</th>
+            <th>63</th>
+            <th>89</th>
+            <th>A</th>
+          </tr>
+          <tr class="B">
+            <th>4</th>
+            <th>FSC/CSC/013</th>
+            <th>Wade Warren</th>
+            <th>24</th>
+            <th>33</th>
+            <th>57</th>
+            <th>C</th>
+          </tr>
+          <tr>
+            <th>5</th>
+            <th>FSC/CSC/014</th>
+            <th>Cameron Williamson</th>
+            <th>20</th>
+            <th>24</th>
+            <th>44</th>
+            <th>D</th>
+          </tr>
+          <tr class="C">
+            <th>6</th>
+            <th>FSC/CSC/015</th>
+            <th>Esther Howard</th>
+            <th>29</th>
+            <th>36</th>
+            <th>65</th>
+            <th>B</th>
+          </tr>
+          <tr>
+            <th>7</th>
+            <th>FSC/CSC/016</th>
+            <th>Darlene Robertson</th>
+            <th>30</th>
+            <th>30</th>
+            <th>60</th>
+            <th>A</th>
+          </tr>
+          <tr class="D">
+            <th>8</th>
+            <th>FSC/CSC/017</th>
+            <th>Robert Fox</th>
+            <th>23</th>
+            <th>54</th>
+            <th>77</th>
+            <th>A</th>
+          </tr>
+          <tr>
+            <th>9</th>
+            <th>FSC/CSC/018</th>
+            <th>Eleanor Pena</th>
+            <th>10</th>
+            <th>23</th>
+            <th>33</th>
+            <th>E</th>
+          </tr>
+          <tr class="E">
+            <th>10</th>
+            <th>FSC/CSC/019</th>
+            <th>Leslie Alexander</th>
+            <th>15</th>
+            <th>37</th>
+            <th>52</th>
+            <th>C</th>
+          </tr>
+          <tr>
+            <th>11</th>
+            <th>FSC/CSC/020</th>
+            <th>Floyd Miles</th>
+            <th>18</th>
+            <th>23</th>
+            <th>41</th>
+            <th>D</th>
+          </tr>
+          <tr class="F">
+            <th>12</th>
+            <th>FSC/CSC/021</th>
+            <th>Brooklyn Simmons</th>
+            <th>12</th>
+            <th>11</th>
+            <th>23</th>
+            <th>F</th>
+          </tr>
+          <tr>
+            <th>13</th>
+            <th>FSC/CSC/022</th>
+            <th>Marvin Mckinney</th>
+            <th>7</th>
+            <th>27</th>
+            <th>34</th>
+            <th>E</th>
+          </tr>
+          <tr class="G">
+            <th>14</th>
+            <th>FSC/CSC/023</th>
+            <th>Devon Lane</th>
+            <th>12</th>
+            <th>10</th>
+            <th>20</th>
+            <th>F</th>
+          </tr>
+          <tr>
+            <th>15</th>
+            <th>FSC/CSC/024</th>
+            <th>Jane Cooper</th>
+            <th>22</th>
+            <th>70</th>
+            <th>92</th>
+            <th>A</th>
+          </tr>
+          <tr class="H">
+            <th>16</th>
+            <th>FSC/CSC/025</th>
+            <th>Kathryn Murphy</th>
+            <th>18</th>
+            <th>65</th>
+            <th>83</th>
+            <th>A</th>
+          </tr>
+          <tr>
+            <th>17</th>
+            <th>FSC/CSC/026</th>
+            <th>Eleanor Pena</th>
+            <th>20</th>
+            <th>48</th>
+            <th>68</th>
+            <th>B</th>
+          </tr>
+          <tr class="I">
+            <th>18</th>
+            <th>FSC/CSC/027</th>
+            <th>Albert Flores</th>
+            <th>14</th>
+            <th>29</th>
+            <th>43</th>
+            <th>D</th>
+          </tr>
+          <tr>
+            <th>19</th>
+            <th>FSC/CSC/028</th>
+            <th>Guy Hawkins</th>
+            <th>25</th>
+            <th>65</th>
+            <th>90</th>
+            <th>A</th>
+          </tr>
+    </table>
+    <a href=""><button type="submit" value="CONTINUE" id="btn">Save Scoresheet</button></a> 
+    </div>
 
 
     </div>
