--- a/html/signup.html
+++ b/html/signup.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/signup.css">
 </head>
 <body>
     <!--Please dont touch this!!!-->
@@ -13,7 +15,38 @@
         <p>Welcome to result broadsheet <br> signup page</p>
 
     <!--Kindly write your code below-->
+    <div class="layer1">
+        <div class="split-flex">
+        <div class="logo" >
+            <img src="/images/logo/logo1.png" alt="Logo" width="100px"> <br>
+            <h6>Sign Up</h6>
+        </div> 
+        <!-- <figure>
+            <img src="/images/logo/logo1.png" alt="logo">
+            <figcaption>Sign Up</figcaption>
+        </figure> -->
 
+        <div class="form">
+            <form action="">      
+                <input id="inp" type="text"  placeholder="&#xf0e0; University Email" name="usern" class="icons">
+                <input id="inp" type="text"  placeholder="&#xf007; Matric Number" name="" class="icons">
+                <input id="inp" type="text"  placeholder="&#xf0f8; Department" name="" class="icons" >
+                <input id="inp" type="text"  placeholder="&#xf07c; Level" name="" class="icons">
+                <div>
+                    <a href="#">
+                <button id="buttonn" type="submit">Sign Up</button>
+                    </a>
+                </div>
+            </form>
+        </div>
+
+       
+    </div> 
+    
+    <div class="side-pic">
+            <img src="/images/undraw-secure-login.jpg" alt="">
+        </div>
+    </div>
 
     </div>
      <!--Please dont touch this!!!-->
