--- a/html/studentinfoform.html
+++ b/html/studentinfoform.html
@@ -102,7 +102,7 @@
                     <tr>
                         <td>9</td>
                         <td>FSC/CSC/018</td>
-                        <td>Eleanor Pena</td>
+                        <td>Eleanor Peana</td>
                         <td><input type="text" placeholder="10"></td>
                         <td><input type="text" placeholder="23"></td>
                         <td>33</td>
