My 100th pull request

--- a/html/studentinfoform.html
+++ b/html/studentinfoform.html
@@ -129,7 +129,7 @@
                     <tr>
                         <td>12</td>
                         <td>FSC/CSC/021</td>
-                        <td>Brooklyn Simmons</td>
+                        <td>Brook Simmons</td>
                         <td><input type="text" placeholder="12"></td>
                         <td><input type="text" placeholder="11"></td>
                         <td>23</td>
