Made a few changes

--- a/html/studentinfoform.html
+++ b/html/studentinfoform.html
@@ -31,18 +31,18 @@
                         <td>1</td>
                         <td>FSC/CSC/010</td>
                         <td>Cody Fisher</td>
-                        <td><input type="text" placeholder="26"></td>
-                        <td><input type="text" placeholder="55"></td>
-                        <td>84</td>
-                        <td>A</td>
+                        <td><input type="text" placeholder="26" class="center cent" onchange="calculate(this.value)"></td>
+                        <td><input type="text" placeholder="55" class="center1 cent" onchange="calculate(this.value)"></td>
+                        <td class="result">84</td>
+                        <td class="third"></td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>FSC/CSC/011</td>
                         <td>Kristin Watson</td>
-                        <td><input type="text" placeholder="20"></td>
+                        <td><input type="text" placeholder="20" onchange="calculate(this.value)"></td>
                         <td><input type="text" placeholder="46"></td>
-                        <td>64</td>
+                        <td class="result">64</td>
                         <td>B</td>
                     </tr>
                     <tr>
@@ -206,5 +206,6 @@
     </div>
      <!--Please dont touch this!!!-->
      <script src="../js/index.js"></script>
+     <script src="../js/testing.js"></script>
 </body>
 </html>
